# mwm

./: CMakeLists.txt  README.md
include/: capture.h  config.h  functions.h  hook.h  stdafx.h  window.h
mwm/: CMakeLists.txt  mwm.cpp  mwm.h
src/: CMakeLists.txt  capture.cpp  functions.cpp  hook.cpp  mwm.cpp  window.cpp
